--- a/css/index.css
+++ b/css/index.css
@@ -13,21 +13,83 @@
 }
 
 .carousel-cell {
-  border-color: #0000ff;
-  border-radius: 5px;
   width: 66%;
-  background: #8C8;
+  background: #ffffff;
   margin-right: 10px;
   height: 60px;
   line-height: 1.5;
+  border-radius: 5px;
 }
 
 .carousel-cell-content {
-  color: #ffffff;
+  color: #2E2E2E;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.grid-item {
+  width: 30%;
+  float: left;
+  height: auto;
+  background: #e6e5e4;
+  border: 2px solid #b6b5b4;
+  margin: 5px;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.grid {
+  align-content: center;
+}
+
+.student {
+  border-width: 4px;
+  background-color: #ef9a9a;
+  border-radius: 5px;
+  border-style: none;
+}
+
+.developer {
+  border-width: 4px;
+  background-color: #81d4fa;
+  border-radius: 5px;
+  border-style: none;
+}
+
+.person {
+  border-width: 4px;
+  background-color: #66bb6a;
+  border-radius: 5px;
+  border-style: none;
+}
+
+.python {
+  border-width: 4px;
+  border-top-color: #FFD43B;
+  border-bottom-color: #FFD43B;
+  border-left-color: #306998;
+  border-right-color: #306998;
+  border-style: solid;
+}
+
+.unity {
+  border-width: 4px;
+  border-top-color: #000000;
+  border-bottom-color: #000000;
+  border-left-color: #dddddd;
+  border-right-color: #dddddd;
+  border-style: solid;
+}
+
+.friends {
+  border-width: 4px;
+  border-top-color: #33691e;
+  border-bottom-color: #33691e;
+  border-left-color: #283593;
+  border-right-color: #283593;
+  border-style: solid;
 }
 
 /*# sourceMappingURL=index.css.map */
