--- a/css/masonry.css
+++ b/css/masonry.css
@@ -4,7 +4,7 @@
   padding: 5px;
   box-sizing: border-box;
   height: 200px;
-  transition: 0.22s all; }
+  transition: 0.22s ease-in-out; }
 
 .grid {
   margin: 0 auto;
@@ -35,7 +35,5 @@
 .grid:hover .grid-item:hover {
   filter: blur(0px);
   opacity: 1; }
-  .grid:hover .grid-item:hover > img {
-    filter: drop-shadow(0px 2px 3px rgba(0, 0, 0, 0.25)); }
 
 /*# sourceMappingURL=masonry.css.map */
