--- a/sass/masonry.sass
+++ b/sass/masonry.sass
@@ -8,7 +8,7 @@
   box-sizing: border-box
   height: 200px
   //box-shadow: 0 2px 3px 0px rgba(0,0,0,0.25)
-  transition: 0.22s all
+  transition: 0.22s ease-in-out
 
 
 .grid
@@ -46,5 +46,24 @@
   opacity: 1
   //box-shadow: 0 8px 20px 0px rgba(0,0,0,0.125)
 
-  > img
-    filter: drop-shadow(0px 2px 3px rgba(0,0,0,0.25))
+//.grid-img
+//  display: inline-block
+//  position: relative
+//  width: 230px
+//  height: 230px
+//
+//.grid-img:after
+//  content: ""
+//  position: absolute
+//  z-index: -1
+//  top: 0
+//  left: 0
+//  width: 100%
+//  height: 100%
+//  opacity: 0
+//  filter: drop-shadow(0px 3px 4px rgba(0,0,0,0.125))
+//  transition: opacity 0.3s ease-in-out
+//
+///* Transition to showing the bigger shadow on hover */
+//.grid-img:hover:after
+//  opacity: 1
