--- a/css/masonry.css
+++ b/css/masonry.css
@@ -4,7 +4,7 @@
   padding: 5px;
   box-sizing: border-box;
   height: 200px;
-  transition: 0.22s ease-in-out; }
+  animation: FadeIn 0.22s; }
 
 .grid {
   margin: 0 auto;
@@ -28,12 +28,16 @@
   .grid-item--width2 {
     width: 100%; } }
 .blur-me {
-  filter: grayscale(20%) blur(0.7px) brightness(94%);
-  opacity: 0.8;
-  box-shadow: none; }
+  animation: FadeOut 0.22s;
+  animation-fill-mode: both; }
 
-.grid:hover .grid-item:hover {
-  filter: blur(0px);
-  opacity: 1; }
+@keyframes FadeOut {
+  to {
+    opacity: 0.8;
+    filter: grayscale(20%) blur(0.7px) brightness(94%); } }
+@keyframes FadeIn {
+  to {
+    opacity: 1;
+    filter: grayscale(0%) blur(0px) brightness(100%); } }
 
 /*# sourceMappingURL=masonry.css.map */
