--- a/sass/main.sass
+++ b/sass/main.sass
@@ -49,9 +49,12 @@
   padding: 10px
   margin-top: 10px
   font-family: 'Montserrat', sans-serif
+  border-radius: 3px
+
 
 @include respond-above(md)
   .page
     width: 80%
     margin: 10px auto auto
+
 
