--- a/css/main.css
+++ b/css/main.css
@@ -44,7 +44,8 @@
   height: fit-content;
   padding: 10px;
   margin-top: 10px;
-  font-family: "Montserrat", sans-serif; }
+  font-family: "Montserrat", sans-serif;
+  border-radius: 3px; }
 
 @media (min-width: 992px) {
   .page {
