--- a/css/masonry.css
+++ b/css/masonry.css
@@ -6,7 +6,57 @@
   padding: 5px;
   box-sizing: border-box;
   height: 200px;
-  animation: FadeIn 0.22s; }
+  transition: 0.18s ease-in-out;
+  overflow: hidden;
+  position: relative; }
+
+.service-wrapper-inner {
+  height: 100%;
+  width: 90%;
+  position: absolute;
+  z-index: 1;
+  top: 68%;
+  padding: 15px 20px;
+  transition: 0.2s ease; }
+  .service-wrapper-inner p {
+    color: #e7e7e7; }
+  .service-wrapper-inner.notitle {
+    width: 60%;
+    top: 70%; }
+
+.service-overlay {
+  background-color: rgba(32, 32, 32, 0.4);
+  width: 120%;
+  height: 120%;
+  position: absolute;
+  top: 80%;
+  left: -28px;
+  z-index: 0;
+  transition: 0.2s ease; }
+  .service-overlay.notitle {
+    -webkit-transform: rotate(35deg);
+    -moz-transform: rotate(35deg);
+    -ms-transform: rotate(35deg);
+    -o-transform: rotate(35deg);
+    left: -65%;
+    height: 300%; }
+  .service-overlay.title {
+    -webkit-transform: rotate(10deg);
+    -moz-transform: rotate(10deg);
+    -ms-transform: rotate(10deg);
+    -o-transform: rotate(10deg); }
+
+.grid-item:hover .service-wrapper-inner {
+  top: -10%;
+  padding: 20px 20px; }
+  .grid-item:hover .service-wrapper-inner.notitle {
+    padding: 15px 20px; }
+.grid-item:hover .service-overlay {
+  top: -10%;
+  background-color: rgba(32, 32, 32, 0.8); }
+  .grid-item:hover .service-overlay.notitle {
+    top: -20%;
+    left: -20%; }
 
 .grid {
   margin: 0 auto;
@@ -30,7 +80,7 @@
   .grid-item--width2 {
     width: 100%; } }
 .blur-me {
-  filter: grayscale(10%) blur(0.5px) brightness(100%);
+  filter: grayscale(15%) blur(0.5px) brightness(100%);
   opacity: 0.8;
   box-shadow: none; }
 
