Added more icons and more text, now changing how image widths work to make it all more responsive

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -49,6 +49,7 @@
   height: fit-content
   padding: 10px
   margin-top: 10px
+  margin-bottom: 10px
   font-family: 'Montserrat', sans-serif
   border-radius: 3px
 
@@ -56,6 +57,6 @@
 @include respond-above(md)
   .page
     width: 80%
-    margin: 10px auto auto
+    margin: 10px auto 10px
 
 
