--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,13 @@
   height: fit-content;
   padding: 10px;
   margin-top: 10px;
+  margin-bottom: 10px;
   font-family: "Montserrat", sans-serif;
   border-radius: 3px; }
 
 @media (min-width: 992px) {
   .page {
     width: 80%;
-    margin: 10px auto auto; } }
+    margin: 10px auto 10px; } }
 
 /*# sourceMappingURL=main.css.map */
