--- a/sass/masonry.sass
+++ b/sass/masonry.sass
@@ -1,21 +1,53 @@
 @import "breakpoint-helpers"
 @import "colors"
 
+/* Rules for the grid icons and stuff
+.grid
+  transition: .2s all
+  position: relative
+
+.grid-item-padding
+  padding: 5px
+  box-sizing: border-box
+  height: fit-content
+
 .grid-item
   background-color: $colorblind-item
   border-radius: 3px
-  width: 240px
-  margin-bottom: 10px
   padding: 5px
+  width: 100%
   box-sizing: border-box
-  height: 200px
-  //box-shadow: 0 2px 3px 0px rgba(0,0,0,0.25)
-  transition: 0.18s ease-in-out
-  //animation: FadeIn 0.22s
+  transition: 0.25s ease-in-out
   overflow: hidden
   position: relative
 
+  img
+    width: inherit
 
+  img::after
+    content: ""
+    display: block
+    padding-bottom: 100%
+
+
+@include respond-above(md)
+  .grid-sizer, .grid-item--std
+    width: 25%
+  .grid-item--wide
+    width: 50%
+@include respond-between(sm, md)
+  .grid-item--std, .grid-sizer
+    width: 50%
+  .grid-item--wide
+    width: 100%
+@include respond-below(sm)
+  .grid-item--std, .grid-sizer
+    width: 100%
+  .grid-item--wide
+    width: 100%
+
+
+/* Rules for the overlay
 .service-wrapper-inner
   height: 100%
   width: 90%
@@ -43,11 +75,11 @@
   transition: 0.2s ease
 
   &.notitle
-    clip-path: polygon(0 0, 100% calc(100% - 2vw), 100% 100%, 0 100%)
+    clip-path: polygon(0 0, 100% 90%, 100% 100%, 0 100%)
     height: 200%
 
   &.title
-    clip-path: polygon(0 0, 100% calc(100% - 18.5vw), 100% 100%, 0 100%)
+    clip-path: polygon(0 0, 100% 20%, 100% 100%, 0 100%)
 
 
 .grid-item:hover
@@ -67,45 +99,26 @@
 
     &.notitle
       top: -20%
-      clip-path: polygon(0 0, calc(100% - 15vw) 0, 100% 100%, 0 100%)
+      clip-path: polygon(0 0, 65% 0, 100% 100%, 0 100%)
       left: -20%
 
-
-.grid
-  margin: 0 auto
-  transition: .2s all
-
-.grid-item--tall3
-  height: 300px
-
-.grid-item--tall4
-  height: 400px
-
-.grid-item--width2
-  background-color: #81d4fa
-  width: 490px
-
-.grid-item--image
-  width: fit-content
-  height: fit-content
-
-@include respond-below(xs)
-  .grid-item--width2
-    width: 100%
-
+img
+  transition: 0.25s
 
 .blur-me
-  filter: grayscale(0%) blur(0.5px) brightness(100%)
-  opacity: 1
-  //transform: scale(.995)
-  box-shadow: none
+  img
+    filter: grayscale(0%) blur(0px) brightness(100%)
+    opacity: 1
+    //transform: scale(.995)
+    box-shadow: none
 
 
 .unblur-me
-  filter: grayscale(0%) blur(0px) brightness(100%)
-  opacity: 1
-  //transform: scale(.995)
-  box-shadow: none
+  img
+    filter: grayscale(0%) blur(0px) brightness(100%)
+    opacity: 1
+    //transform: scale(.995)
+    box-shadow: none
 
 .grid:hover .grid-item:hover
   //transform: scale(1.005)
