--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,8 +1,28 @@
 header {
   display: flex;
   flex-direction: row;
+  align-content: center;
 
   :nth-child(2) {
     margin-left: auto;
+  }
+
+  h2:last-of-type {
+    margin-right: 5px;
+  }
+
+  margin: 10px;
+  padding: 10px;
+  border-radius: 5px;
+  background: #66bb6a;
+  font-family: "Fira Code", monospace;
+
+  h1 {
+    font-weight: 600;
+    margin: 0 0 0 5px;
+  }
+
+  h2 {
+    margin: 0
   }
 }
