--- a/src/components/ProjectGrid.scss
+++ b/src/components/ProjectGrid.scss
@@ -1,26 +1,81 @@
 @import "~include-media/dist/_include-media.scss";
 
-$breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
+$breakpoints: (x-small: 320px, small: 660px, medium: 900px, large: 1300px, x-large: 1560px);
+
+// Override Sass min()
+@function min($numbers...) {
+  @return m#{i}n(#{$numbers});
+}
+
+// Override Sass max()
+@function max($numbers...) {
+  @return m#{a}x(#{$numbers});
+}
+
 
 #project-grid {
-  display: grid;
-
   margin: 10px;
   background: #FFD43B;
   border-radius: 5px;
+  //padding: 10px;
 
+  @include media("<=x-small") {
+    .GridSizer, .OneByOne, .FourByOne {
+      width: 100%;
+    }
+  }
 
+  @include media(">x-small", "<small") {
+    .GridSizer, .OneByOne {
+      width: 49%;
+    }
+    .FourByOne {
+      width: 100%;
+    }
+  }
 
-  //@include media(">phone") {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 5px;
-    justify-items: stretch;
-    align-items: stretch;
-  //}
+  @include media(">=small", "<medium") {
+    .GridSizer, .OneByOne {
+      width: 32%;
+    }
+    .FourByOne {
+      width: 95%;
+    }
+  }
+
+  @include media(">=medium", "<large") {
+    .GridSizer, .OneByOne {
+      width: 24.5%;
+    }
+    .FourByOne {
+      width: 73%;
+    }
+  }
+
+  @include media(">=large", "<x-large") {
+    .GridSizer, .OneByOne {
+      max-width: 300px;
+      width: 19.5%;
+    }
+    .FourByOne {
+      width: 79.5%;
+      max-width: 1200px;
+    }
+  }
+
+  @include media(">=x-large") {
+    .GridSizer, .OneByOne {
+      width: 300px;
+    }
+    .FourByOne {
+      width: 1200px;
+    }
+  }
+
 
 }
 
-.OneByOneGridElement {
+.OneByOne {
   display: flex;
   flex-direction: column;
   width: available;
@@ -36,7 +91,7 @@ $breakpoints: (phone: 320px, tablet: 768px, desktop: 1024px);
   }
 }
 
-.FourByOneGridElement {
+.FourByOne {
   grid-column: span 2;
   display: flex;
   flex-direction: row;
