--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,15 +1,6 @@
 header {
   display: flex;
   flex-direction: row;
-  align-content: center;
-
-  :nth-child(2) {
-    margin-left: auto;
-  }
-
-  h2:last-of-type {
-    margin-right: 5px;
-  }
 
   margin: 10px;
   padding: 10px;
@@ -22,7 +13,54 @@ header {
     margin: 0 0 0 5px;
   }
 
-  h2 {
-    margin: 0
+  .headerLinks {
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    margin-left: auto;
+
+    h2 {
+      margin: 0;
+      border-radius: 5px;
+
+      &:hover {
+        background: #ddd;
+      }
+
+      &.active {
+        background-color: #4CAF50;
+        color: white;
+      }
+    }
+
+    h2:last-of-type {
+      margin-right: 5px;
+    }
+
+
+    /* Hide the link that should open and close the topnav on small screens */
+    .icon {
+      display: none;
+    }
+
+    @media screen and (max-width: 660px) {
+      h2 {
+        display: none;
+      }
+
+      .icon {
+        margin-left: auto;
+        display: block;
+      }
+    }
+  }
+
+  @media screen and (max-width: 660px) {
+    &.responsive {
+      background: #282c34;
+      h2 {
+        display: block;
+      }
+    }
   }
 }
