--- a/src/components/ProjectGrid.scss
+++ b/src/components/ProjectGrid.scss
@@ -1,6 +1,6 @@
 @import "~include-media/dist/_include-media.scss";
 
-$breakpoints: (x-small: 320px, small: 660px, medium: 900px, large: 1300px, x-large: 1560px);
+$breakpoints: (x-small: 400px, small: 660px, medium: 900px, large: 1300px, x-large: 1560px);
 
 // Override Sass min()
 @function min($numbers...) {
@@ -12,11 +12,36 @@ $breakpoints: (x-small: 320px, small: 660px, medium: 900px, large: 1300px, x-lar
   @return m#{a}x(#{$numbers});
 }
 
-
-#project-grid {
+#project-grid-parent {
   margin: 10px;
   background: #FFD43B;
   border-radius: 5px;
+
+  & > #project-header {
+    background: grey;
+    border-radius: 5px 5px 0 0;
+    margin-bottom: 2px;
+
+    padding: 5px;
+
+    h2 {
+      margin-bottom: 0;
+      font-family: "Fira Code", monospace;
+      font-size: 24px;
+    }
+
+    p {
+      margin: 0 0 3px;
+      font-family: "Montserrat", sans-serif;
+      font-size: 18px;
+    }
+
+  }
+}
+
+
+#project-grid {
+
   //padding: 10px;
 
   @include media("<=x-small") {
@@ -36,26 +61,26 @@ $breakpoints: (x-small: 320px, small: 660px, medium: 900px, large: 1300px, x-lar
 
   @include media(">=small", "<medium") {
     .GridSizer, .OneWide {
-      width: 32%;
+      width: 33%;
     }
     .FourByOne {
-      width: 95%;
+      width: 99%;
     }
   }
 
   @include media(">=medium", "<large") {
     .GridSizer, .OneWide {
-      width: 24.5%;
+      width: 24.9%;
     }
     .FourByOne {
-      width: 73%;
+      width: 74.6%;
     }
   }
 
   @include media(">=large", "<x-large") {
     .GridSizer, .OneWide {
       max-width: 300px;
-      width: 19.5%;
+      width: 19.9%;
     }
     .FourByOne {
       width: 58.5%;
@@ -81,12 +106,12 @@ $breakpoints: (x-small: 320px, small: 660px, medium: 900px, large: 1300px, x-lar
     border-radius: 5px;
     background: lightcyan;
 
-    box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     transition: box-shadow 0.3s ease-in-out;
   }
 
   .GridElementInternal:hover {
-    box-shadow: 0 2px 5px rgba(0,0,0,0.3);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   }
 
   h2 {
@@ -159,6 +184,6 @@ $breakpoints: (x-small: 320px, small: 660px, medium: 900px, large: 1300px, x-lar
   font-size: 24px;
   color: black;
 
-  background: rgba(224,255,255, 0.7);
+  background: rgba(224, 255, 255, 0.7);
   border-radius: 5px;
 }
