Ok arctic color chosen

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -5,7 +5,7 @@ header {
   margin: 10px;
   padding: 10px;
   border-radius: 5px;
-  background: #66bb6a;
+  background: #84B7DB;
   font-family: "Fira Code", monospace;
 
   h1 {
