--- a/src/components/ProjectGrid.scss
+++ b/src/components/ProjectGrid.scss
@@ -14,15 +14,20 @@ $breakpoints: (x-small: 430px, small: 660px, medium: 900px, large: 1300px, x-lar
 
 #project-grid-parent {
   margin: 10px;
-  background: #FFD43B;
+  background: #FECEA8;
   border-radius: 5px;
 
   & > #project-header {
-    background: grey;
+    background: #1C1C1C;
     border-radius: 5px 5px 0 0;
     margin-bottom: 2px;
 
+
     padding: 5px;
+
+    * {
+      color: white;
+    }
 
     h2 {
       margin-bottom: 0;
@@ -114,7 +119,7 @@ $breakpoints: (x-small: 430px, small: 660px, medium: 900px, large: 1300px, x-lar
   .GridElementInternal {
     padding: 9px;
     border-radius: 5px;
-    background: lightcyan;
+    background: #F1F1F1;
 
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
     transition: box-shadow 0.3s ease-in-out;
