--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -10,7 +10,7 @@
   }
 
   .about-me-card {
-    background: #F1F1F1;
+    background: var(--about-me);
     border-radius: 5px;
     margin: 0 5px 0;
     padding: 10px;
@@ -18,7 +18,7 @@
   }
 
   #about-me {
-    background: #F1F1F1;
+    background: var(--about-me);
     border-radius: 5px;
     padding: 15px;
     width: fit-content;
