--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -81,6 +81,10 @@ button {
   background: none!important;
   border: none;
   padding: 0!important;
-  color: #1890ff;
+  color: var(--link-color);
   cursor: pointer;
+}
+
+a {
+  color: var(--link-color);
 }
