--- a/src/components/AboutMe/AboutMe.scss
+++ b/src/components/AboutMe/AboutMe.scss
@@ -1,6 +1,7 @@
 #about-me-parent {
   margin-left: 10px;
   margin-right: 10px;
+  margin-bottom: 10px;
   display: flex;
   flex-direction: row;
   justify-content: center;
