Added hover and changed background

--- a/src/vars.scss
+++ b/src/vars.scss
@@ -7,11 +7,12 @@
   --grid-background: var(--background);
   --grid-header-background: var(--background);
   --grid-header-text: #F1F1F1;
-  --grid-element-background: #354560;
+  --grid-element-background: hsl(218, 24%, 25%);
   --grid-element-border: #6f6f6f;
+  --grid-element-shadow: rgba(255, 255, 255, 0.3);
   --grid-element-header: rgb(169 162 228 / 100%);
   --chainlink-icon-background: rgba(43, 43, 43, 0.3);
-  --link-color: #1890ff;
+  --link-color: var(--grid-element-header);
   --grid-element-subheader: darkgrey;
 }
 
