--- a/src/components/ProjectGrid.scss
+++ b/src/components/ProjectGrid.scss
@@ -162,18 +162,19 @@ $breakpoints: (x-small: 520px, small: 760px, medium: 1100px, large: 1400px, x-la
     border-style: solid;
     background: var(--grid-element-background);
 
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-    transition: box-shadow 0.3s ease-in-out;
+    box-shadow: 0 1px 2px var(--grid-element-shadow);
+    transition: box-shadow 0.2s ease-in-out;
   }
 
   .GridElementInternal:hover {
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 2px 5px var(--grid-element-shadow);
   }
 
   h2 {
     font-family: "Fira Code", monospace;
     font-weight: 400;
     margin-bottom: 0px;
+    text-shadow: 0px 0px 1px var(--grid-element-header);
     color: var(--grid-element-header);
     line-height: normal;
   }
